tests/error/quotientInteger-unit-wrong-1st-argument.uplc
(program 1.0.0[[(builtin quotientInteger)(con unit ())](con integer 10)])